# proj_style_mac

./: Full_run.m  README.md  output_hu_style.m  startup.m
Back_projected/: CMakeLists.txt  back_projected  main.cpp  model.cpp  params.cfg
convolutional/: CMakeLists.txt  convolutional  main.cpp  params.cfg
sample_and_hog/: CMakeLists.txt  CommonZ.h  FileZ.cpp  FileZ.h  main.cpp  model.cpp  model.h  params.cfg  readbmp.cpp  readbmp.h  sample
